--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="sum_of_exchange">Сумма обмена</string>
     <string name="exchange_rate">Курс</string>
     <string name="convert_btn">Конвертировать</string>
+    <string name="facebook_app_id">442154337644611</string>
 </resources>
